# git-reabsorb

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: cancel.rs  cli.rs  diff_parser.rs  editor.rs  features.rs  git.rs  lib.rs  main.rs  models.rs  patch.rs  plan_store.rs  test_utils.rs  utils.rs  validation.rs
src/app/: executor.rs  mod.rs  planner.rs
src/assessment/: comparison.rs  mod.rs  report.rs  types.rs
src/assessment/criteria/: atomicity.rs  coherence.rs  cohesion.rs  message.rs  mod.rs  reversibility.rs  scope.rs  self_containment.rs
src/assessment/llm/: mod.rs  parser.rs  prompt.rs
src/llm/: mod.rs
src/patch/: context.rs  mod.rs  parser.rs  writer.rs
src/reorganize/: absorb.rs  by_file.rs  mod.rs  plan_file.rs  preserve.rs  squash.rs
src/reorganize/hierarchical/: analyzer.rs  clusterer.rs  mod.rs  orderer.rs  planner.rs  types.rs  validator.rs
src/reorganize/llm/: client.rs  file_io.rs  mod.rs  parser.rs  prompt.rs  types.rs
src/services/: executor.rs  mod.rs  planner.rs  range.rs  strategy.rs
tests/: llm_client_tests.rs  llm_integration_tests.rs  reorganizer_tests.rs
