[package]
name = "git-reabsorb"
version = "0.1.0"
edition = "2021"
description = "Reorganize git commits by unstaging and recommitting with new structure"
license = "MIT"

[[bin]]
name = "git-reabsorb"
path = "src/bin/git-reabsorb.rs"

[dependencies]
thiserror = "1.0"
clap = { version = "4.4", features = ["derive", "env"] }
tempfile = "3.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
ctrlc = "3.4"
